# cse-341

./: hw1.ml  wget-log
_build/: .db  .digest-db  log
hw2/hw2/: dune  hw2.ml  hw2test.ml  json.ml
hw2/hw2/_build/: .db  .digest-db  log
hw2/hw2/_build/.aliases/default/: all-00000000000000000000000000000000  runtest-00000000000000000000000000000000
hw2/hw2/_build/default/: hw2.cma  hw2.cmxa  hw2.cmxs  hw2.ml  hw2challenge.cma  hw2challenge.cmxa  hw2challenge.cmxs  hw2test.bc  hw2test.ml  json.cma  json.cmxa  json.cmxs  json_structures.cma  json_structures.cmxa  parsed_small_bus.ml
hw2/hw2/_build/default/.hw2.objs/byte/: hw2.cmi  hw2.cmo  hw2.cmt
hw2/hw2/_build/default/.hw2.objs/native/: hw2.cmx
hw2/hw2/_build/default/.hw2challenge.objs/byte/: hw2challenge.cmi  hw2challenge.cmo  hw2challenge.cmt
hw2/hw2/_build/default/.hw2challenge.objs/native/: hw2challenge.cmx
hw2/hw2/_build/default/.hw2test.eobjs/byte/: dune__exe__Hw2test.cmi  dune__exe__Hw2test.cmo  dune__exe__Hw2test.cmt
hw2/hw2/_build/default/.hw2test.eobjs/native/: dune__exe__Hw2test.cmx
hw2/hw2/_build/default/.json.objs/byte/: json.cmi  json.cmo  json.cmt
hw2/hw2/_build/default/.json.objs/native/: json.cmx
hw2/hw2/_build/default/.json_structures.objs/: parsed_complete_bus.ml.d  parsed_medium_bus.ml.d  parsed_small_bus.ml.d
hw2/hw2/_build/default/.json_structures.objs/byte/: json_structures.cmi  json_structures.cmo  json_structures.cmt  (+9 more)
hw2/hw2/_build/default/.merlin-conf/: exe-hw2test  lib-hw2  lib-hw2challenge  lib-json  lib-json_structures
hw2/hw2/_build/default/.utop/: utop.ml-gen
(+118 files in other folders)
