(library
 (name hw2)
 (libraries json json_structures)
 (modules hw2))

(library
 (name hw2challenge)
 (libraries hw2 json json_structures)
 (modules hw2challenge))

(library
 (name json_structures)
 (libraries json)
 (modules parsed_complete_bus
   parsed_medium_bus
   parsed_small_bus))

(library
 (name json)
 (modules json))

(tests
 (names hw2test)
 (modules hw2test)
 (libraries hw2 hw2challenge))

(env
  (dev
    (flags (:standard -warn-error -A -w -27 -w -39 -w -33 -w -26))))